# walpp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  appexception.cpp  appexception.h  build.sh  color.cpp  color.h  image.cpp  image.h  main.cpp  settings.h  util.cpp  util.h  wallpaper.cpp  wallpaper.h
include/: HaishokuAlgo.h  HaishokuImage.h  appexception.h  backend.h  color.h  export.h  haishoku.h  image.h  logging.h  reload.h  sequences.h  settings.h  theme.h  types.h  util.h  wallpaper.h
src/: HaishokuAlgo.cpp  HaishokuImage.cpp  appexception.cpp  backend.cpp  color.cpp  export.cpp  haishoku.cpp  image.cpp  logging.cpp  main.cpp  reload.cpp  sequences.cpp  settings.cpp  theme.cpp  util.cpp  wallpaper.cpp
